# core

./: .travis.yml  Cargo.toml
local-provider/: Cargo.toml
local-provider/src/: lib.rs
local-provider/tests/: scan.rs
src/: bus.rs  error.rs  lib.rs  logger.rs  store.rs  sync.rs
src/backends/: gst.rs  mod.rs  player.rs  rodio.rs  state.rs
src/cache/: mod.rs
src/player/: event.rs  mod.rs  player.rs  queue.rs
src/provider/: explorer.rs  folder.rs  item.rs  mod.rs  sync_error.rs
src/provider/local/: mod.rs
src/provider/pocketcasts/: episode.rs  mod.rs  podcast.rs  user.rs
src/provider/soundcloud/: mod.rs  playlist.rs  track.rs
src/provider/spotify/: mod.rs
tests/: player.rs
