[package]
name = "rustic-core"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8.2"
cookie = "0.10.1"
rayon = "1.0"
toml = "0.4.5"
libc = "0.2.34"
url = "1.7"
failure = "0.1"
failure_derive = "0.1"
md5 = "0.3.7"
image = "0.19"
crossbeam-channel = "0.2"
#rspotify = "0.2"

[dependencies.slog]
version = "2.1.1"
features = ["max_level_debug"]

[dependencies.soundcloud]
git = "https://github.com/maxjoehnk/soundcloud-rs"

[dependencies.pocketcasts]
git = "https://github.com/maxjoehnk/pocketcasts-rs"

[dependencies.rspotify]
git = "https://github.com/maxjoehnk/rspotify"
branch = "feature/debug-client"

[dependencies.rustic-local-provider]
path = "local-provider"
